# ndir

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
shell/: cdw.zsh  ndir.bash  ndir.fish  ndir.zsh
src/: fuzzy.rs  main.rs  navigator.rs  render.rs
