[package]
name = "ndir"
version = "0.1.0"
edition = "2021"
description = "Inline arrow-key directory navigation for your shell"
license = "MIT"
repository = "https://github.com/tonegawa07/ndir"
homepage = "https://github.com/tonegawa07/ndir"
keywords = ["cli", "directory", "navigation", "terminal", "fuzzy"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.28"
fuzzy-matcher = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
